[gd_scene load_steps=20 format=3 uid="uid://daek7wkgjlncy"]

[ext_resource type="Script" uid="uid://5wyhh10bs4rv" path="res://Scripts/hud.gd" id="1_vh8u0"]
[ext_resource type="Script" uid="uid://b7hkpbp1jxo0l" path="res://Scripts/hints.gd" id="2_cgmvo"]
[ext_resource type="Texture2D" uid="uid://bytrj55qd475v" path="res://assets/sheets/tree_sheet.png" id="3_bjfho"]
[ext_resource type="Script" uid="uid://bo5x8fgaumylu" path="res://Scripts/wave_indicator.gd" id="4_6fbih"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_cgmvo"]
resource_local_to_scene = true
color = Color(0, 0, 0, 0.14902)
thickness = 2

[sub_resource type="StyleBoxLine" id="StyleBoxLine_vh8u0"]
resource_local_to_scene = true
color = Color(0.258824, 0.968627, 1, 0.470588)
thickness = 2

[sub_resource type="StyleBoxLine" id="StyleBoxLine_fccik"]
resource_local_to_scene = true
color = Color(1, 0.968627, 1, 0.690196)
thickness = 2

[sub_resource type="LabelSettings" id="LabelSettings_cgmvo"]
font_size = 10
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_sjmnu"]
font_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_6fbih"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialogue:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(162, 239)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dialogue:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Dialogue:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(60, 85)]
}

[sub_resource type="Animation" id="Animation_t1xeu"]
resource_name = "hide_dialogue"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialogue:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.1, 0.2),
"transitions": PackedFloat32Array(0.435276, 0.965936, 1.41421, 1),
"update": 0,
"values": [Vector2(100, 64), Vector2(80, 33.52), Vector2(50, 88.36), Vector2(20, 293.51)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dialogue:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.1, 0.2),
"transitions": PackedFloat32Array(0.435276, 0.965936, 1.41421, 1),
"update": 0,
"values": [0.0, -0.278806, -0.278806, -0.480351]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Dialogue:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.1, 0.2),
"transitions": PackedFloat32Array(0.435276, 0.965936, 1.41421, 1),
"update": 0,
"values": [Vector2(130, 85), Vector2(60, 85), Vector2(60, 85), Vector2(60, 85)]
}

[sub_resource type="Animation" id="Animation_bjfho"]
resource_name = "show_dialogue"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialogue:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.31864, 1),
"update": 0,
"values": [Vector2(100, 239), Vector2(100, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dialogue:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.31864, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Dialogue:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.31864, 1),
"update": 0,
"values": [Vector2(60, 85), Vector2(60, 85)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t1xeu"]
_data = {
&"RESET": SubResource("Animation_6fbih"),
&"hide_dialogue": SubResource("Animation_t1xeu"),
&"show_dialogue": SubResource("Animation_bjfho")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_bjfho"]
atlas = ExtResource("3_bjfho")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fbih"]
atlas = ExtResource("3_bjfho")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1xeu"]
atlas = ExtResource("3_bjfho")
region = Rect2(64, 64, 32, 32)

[sub_resource type="Animation" id="Animation_8jye8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaveLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 113)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaveLabel:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaveLabel:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(60, 23)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WaveLabel:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WaveLabel:theme_override_colors/font_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_36asn"]
resource_name = "show_wave"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaveLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.566667, 1.43333, 2),
"transitions": PackedFloat32Array(0.196146, 2.2974, 2.2974, 1),
"update": 0,
"values": [Vector2(18, 102), Vector2(-14, 10), Vector2(-14, 10), Vector2(17, -71)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaveLabel:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.566667, 1.43333, 2),
"transitions": PackedFloat32Array(0.196146, 2.2974, 2.2974, 1),
"update": 0,
"values": [0.0, 0.0, 0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaveLabel:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.566667, 1.43333, 2),
"transitions": PackedFloat32Array(0.196146, 2.2974, 2.2974, 1),
"update": 0,
"values": [Vector2(60, 23), Vector2(60, 23), Vector2(60, 23), Vector2(60, 23)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WaveLabel:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.566667, 1.43333, 2),
"transitions": PackedFloat32Array(0.196146, 2.2974, 2.2974, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WaveLabel:theme_override_colors/font_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.566667, 1.43333, 2),
"transitions": PackedFloat32Array(1.8025, 0.5, 0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_43w4t"]
_data = {
&"RESET": SubResource("Animation_8jye8"),
&"show_wave": SubResource("Animation_36asn")
}

[node name="HUD" type="Control" groups=["hud"]]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vh8u0")

[node name="OxygenBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -27.0
offset_top = 158.0
offset_right = 23.0
offset_bottom = 174.0
grow_horizontal = 2
tooltip_text = "health bar"
theme_override_colors/font_color = Color(1, 1, 1, 0.521569)
theme_override_font_sizes/font_size = 10
theme_override_styles/background = SubResource("StyleBoxLine_cgmvo")
theme_override_styles/fill = SubResource("StyleBoxLine_vh8u0")
max_value = 1.0
value = 0.22

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -27.0
offset_top = 6.0
offset_right = 23.0
offset_bottom = 10.0
grow_horizontal = 2
tooltip_text = "health bar"
theme_override_styles/background = SubResource("StyleBoxLine_cgmvo")
theme_override_styles/fill = SubResource("StyleBoxLine_fccik")
max_value = 1.0
value = 0.2
show_percentage = false

[node name="Hints" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_cgmvo")

[node name="Start" type="Label" parent="Hints"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "[LMB] - to shoot
[W] [A] [S] [D] - to move around
FEED the plants to SURVIVE!"
label_settings = SubResource("LabelSettings_cgmvo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Grab" type="Label" parent="Hints"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -27.0
offset_right = 118.0
offset_bottom = -4.0
grow_vertical = 0
text = "[RMB] - to grab/throw"
label_settings = SubResource("LabelSettings_sjmnu")
vertical_alignment = 2

[node name="Return" type="Label" parent="Hints"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 301.0
offset_top = -27.0
offset_right = 416.0
offset_bottom = -4.0
grow_vertical = 0
text = "[ESC] - to return"
label_settings = SubResource("LabelSettings_sjmnu")
vertical_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_t1xeu")
}

[node name="Dialogue" type="HBoxContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 162.0
offset_top = 239.0
offset_right = -37.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(162.115, 42.38)
theme_override_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Dialogue"]
layout_direction = 2
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Oxygen_Tree_button" type="Button" parent="Dialogue/HBoxContainer"]
custom_minimum_size = Vector2(55, 70)
layout_mode = 2
focus_mode = 0

[node name="TextureRect" type="TextureRect" parent="Dialogue/HBoxContainer/Oxygen_Tree_button"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_bjfho")

[node name="Oxygen_Tree_button2" type="Button" parent="Dialogue/HBoxContainer"]
custom_minimum_size = Vector2(55, 70)
layout_mode = 2
focus_mode = 0

[node name="TextureRect" type="TextureRect" parent="Dialogue/HBoxContainer/Oxygen_Tree_button2"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_6fbih")

[node name="Field_Tree_button" type="Button" parent="Dialogue/HBoxContainer"]
custom_minimum_size = Vector2(55, 70)
layout_mode = 2
focus_mode = 0

[node name="TextureRect" type="TextureRect" parent="Dialogue/HBoxContainer/Field_Tree_button"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_t1xeu")

[node name="WaveIndicator" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -19.0
offset_right = -80.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_6fbih")

[node name="WaveLabel" type="Label" parent="WaveIndicator"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = 93.0
offset_right = 57.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Wave: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="WaveIndicator"]
libraries = {
&"": SubResource("AnimationLibrary_43w4t")
}

[connection signal="button_up" from="Dialogue/HBoxContainer/Oxygen_Tree_button" to="." method="_on_dialogue_button_button_up" binds= [0]]
[connection signal="button_up" from="Dialogue/HBoxContainer/Oxygen_Tree_button2" to="." method="_on_dialogue_button_button_up" binds= [1]]
[connection signal="button_up" from="Dialogue/HBoxContainer/Field_Tree_button" to="." method="_on_dialogue_button_button_up" binds= [2]]
